test/errors/plugin-multiple-exports.js

module.exports = {
    div2: function (ctx, x) {
        return x.lit/2;
    }, 
    mul2: (ctx, x) => x.lit*2
}
